# docchat-ai

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: backend.yml  frontend.yml
docchat-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
docchat-backend/app/: __init__.py  config.py  main.py
docchat-backend/app/api/: __init__.py  routes_chat.py  routes_documents.py
docchat-backend/app/ingestion/: __init__.py  chunker.py  embedder.py  parser.py
docchat-backend/app/llm/: __init__.py  base.py  claude_client.py  ollama_client.py
docchat-backend/app/rag/: __init__.py  pipeline.py  query_parser.py
docchat-backend/app/retrieval/: __init__.py  reranker.py  vector_store.py
docchat-backend/scripts/: migrate_rechunk.py
docchat-backend/tests/: test_chunker.py  test_claude_client.py  test_embedder.py  test_health.py  test_ingestion.py  test_llm_base.py  test_llm_factory.py  test_ollama_client.py  test_parser.py  test_pipeline.py  test_query_parser.py  test_reranker.py  test_retrieval.py  test_routes_chat.py  test_routes_documents.py  test_vector_store.py
docchat-backend/tests/fixtures/: sample.md  sample.txt
docchat-frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
docchat-frontend/src/: App.jsx  App.test.jsx  main.jsx
docchat-frontend/src/components/ChatPanel/: AIBubble.jsx  ChatInput.jsx  ChatInput.test.jsx  (+8 more)
docchat-frontend/src/hooks/: useChat.js  useChat.test.js  useDocuments.js  useDocuments.test.js
docchat-frontend/src/styles/: global.css  reset.css  tokens.css
(+6 files in other folders)
