[project]
name = "docchat-backend"
version = "0.1.0"
description = "RAG chatbot backend: document ingestion, chunking, embedding, and retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "transformers>=5.9.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (model loading) -- skip with: pytest -m 'not slow'",
]
